src/App.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: #fff;
  font-family: "Lato", sans-serif;
  color: #333;
}

.dark {
  background: #222;
  color: #fff;
}

@keyframes backgroundWipe {
  from {
    width: 0;
  }
  to {
    width: calc(100% + 48px);
  }
}

.intro-name {
  width: calc(100vw - 12px);
}

.intro-name-bg {
  animation: backgroundWipe 3s ease-in-out forwards;
}

@media (prefers-reduced-motion: reduce) {
  .intro-name-bg {
    animation: none;
    width: 100vw;
  }
}

@media screen and (min-width: 640px) {
  @keyframes backgroundWipe {
    from {
      width: 0;
    }
    to {
      width: calc(100% + 192px);
    }
  }
}

@media screen and (min-width: 768px) {
  @keyframes backgroundWipe {
    from {
      width: 0;
    }
    to {
      width: calc(100% + 56px);
    }
  }
}

